--- a/package.json
+++ b/package.json
@@ -6,31 +6,31 @@
     "build": "webpack",
     "watch": "webpack -w",
     "test": "karma start karma.conf.js",
-	"test-debug": "karma start karma.conf.js --single-run=false --debug --auto-watch",
+	  "test-debug": "karma start karma.conf.js --single-run=false --debug --auto-watch",
     "test-browser": "karma start karma.conf.js --browsers=Chrome",
     "test-browser-debug": "karma start karma.conf.js --browsers=Chrome --single-run=false --debug --auto-watch"
   },
   "dependencies": {
-    "es6-promise": "3.0.2",
-    "flux": "2.1.1",
-    "react": "0.13.3"
+    "es6-promise": "^3.0.2",
+    "flux": "^2.1.1",
+    "react": "^0.13.3"
   },
   "devDependencies": {
-    "css-loader": "^0.18.0",
+    "css-loader": "^0.19.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "gulp": "^3.9.0",
-    "gulp-tslint": "^3.3.0-beta",
+    "gulp-tslint": "^3.3.0",
     "gulp-watch": "^4.3.5",
     "gulp-webpack": "^1.5.0",
     "karma": "^0.13.10",
     "karma-chrome-launcher": "^0.2.0",
-    "karma-cli": "^0.1.0",
+    "karma-cli": "^0.1.1",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.7.0",
-    "less": "^2.5.1",
+    "less": "^2.5.3",
     "less-loader": "^2.2.1",
     "node-libs-browser": "^0.5.3",
     "null-loader": "^0.1.1",
@@ -40,9 +40,9 @@
     "style-loader": "^0.12.4",
     "ts-loader": "^0.5.5",
     "tslint-loader": "^1.0.2",
-    "typescript": "^1.6.2",
+    "typescript": "1.6.0-beta",
     "webpack": "^1.12.2",
     "webpack-config": "^0.8.0",
-    "webpack-dev-server": "^1.11.0"
+    "webpack-dev-server": "^1.12.0"
   }
 }
