--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "flux": "~2.1.1",
-    "react": "~0.13.3"
+    "react": "~0.14.2",
+    "react-dom": "~0.14.2"
   },
   "devDependencies": {
     "css-loader": "~0.19.0",
@@ -36,6 +37,7 @@
     "phantomjs": "~1.9.18",
     "phantomjs-polyfill": "~0.0.1",
     "react-hot-loader": "~1.3.0",
+    "react-addons-test-utils": "~0.14.2",
     "style-loader": "~0.12.4",
     "ts-loader": "~0.6.1",
     "tslint-loader": "~1.0.2",
