--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,8 +12,8 @@
 	},
 
     // When enabled, will trim trailing whitespace when you save a file.
-    "files.trimTrailingWhitespace": true
+    "files.trimTrailingWhitespace": true,
 
-    // Specifies the folder path containing the tsserver and lib*.d.ts files to use. NOT WORKING FOR NOW, check README for workaround
-	// "typescript.tsdk": "node_modules/typescript/lib"
+    // Specifies the folder path containing the tsserver and lib*.d.ts files to use.
+	"typescript.tsdk": "node_modules/typescript/lib"
 }
