--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
   },
   "dependencies": {
     "flux": "~2.1.1",
-    "react": "~0.14.2",
-    "react-dom": "~0.14.2"
+    "react": "~0.14.3",
+    "react-dom": "~0.14.3"
   },
   "devDependencies": {
-    "css-loader": "~0.19.0",
+    "css-loader": "~0.23.0",
     "extract-text-webpack-plugin": "~0.9.1",
     "file-loader": "~0.8.4",
     "gulp": "~3.9.0",
-    "gulp-tslint": "~3.3.0",
+    "gulp-tslint": "~3.6.0",
     "gulp-watch": "~4.3.5",
-    "jasmine-core": "^2.3.4",
+    "jasmine-core": "~2.3.4",
     "karma": "~0.13.10",
     "karma-chrome-launcher": "~0.2.0",
     "karma-cli": "~0.1.1",
     "karma-jasmine": "~0.3.6",
     "karma-phantomjs-launcher": "~0.2.1",
-    "karma-sourcemap-loader": "~0.3.5",
+    "karma-sourcemap-loader": "~0.3.6",
     "karma-webpack": "~1.7.0",
     "less": "~2.5.3",
     "less-loader": "~2.2.1",
@@ -37,14 +37,14 @@
     "phantomjs": "~1.9.18",
     "phantomjs-polyfill": "~0.0.1",
     "react-hot-loader": "~1.3.0",
-    "react-addons-test-utils": "~0.14.2",
-    "style-loader": "~0.12.4",
-    "ts-loader": "~0.6.1",
+    "react-addons-test-utils": "~0.14.3",
+    "style-loader": "~0.13.0",
+    "ts-loader": "~0.7.1",
     "tslint-loader": "~1.0.2",
     "typescript": "~1.6.2",
-    "webpack": "~1.12.2",
-    "webpack-config": "~1.0.2",
-    "webpack-dev-server": "~1.12.0",
-    "webpack-stream": "^2.1.1"
+    "webpack": "~1.12.8",
+    "webpack-config": "~2.3.0",
+    "webpack-dev-server": "~1.12.1",
+    "webpack-stream": "~2.1.1"
   }
 }
