--- a/package.json
+++ b/package.json
@@ -1,50 +1,63 @@
 {
   "name": "typescript-webpack-react-flux-boilerplate",
   "version": "1.0.0",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pepaar/typescript-webpack-react-flux-boilerplate.git"
+  },
   "scripts": {
     "start": "node server.js",
     "build": "webpack",
     "watch": "webpack -w",
     "test": "karma start karma.conf.js",
-	  "test-debug": "karma start karma.conf.js --single-run=false --debug --auto-watch",
+	"test-debug": "karma start karma.conf.js --single-run=false --debug --auto-watch",
     "test-browser": "karma start karma.conf.js --browsers=Chrome",
     "test-browser-debug": "karma start karma.conf.js --browsers=Chrome --single-run=false --debug --auto-watch"
   },
   "dependencies": {
     "flux": "~2.1.1",
-    "react": "~0.14.3",
-    "react-dom": "~0.14.3"
+    "react": "~0.14.7",
+    "react-dom": "~0.14.7"
   },
   "devDependencies": {
-    "css-loader": "~0.23.0",
-    "extract-text-webpack-plugin": "~0.9.1",
-    "file-loader": "~0.8.4",
+    "babel": "~6.3.26",
+    "babel-core": "~6.4.5",
+    "babel-loader": "~6.2.2",
+    "babel-plugin-external-helpers-2": "~6.3.13",
+    "babel-polyfill": "~6.3.14",
+    "babel-preset-es2015": "~6.3.13",
+    "babel-preset-es2015-loose": "~7.0.0",
+    "css-loader": "~0.23.1",
+    "extract-text-webpack-plugin": "~1.0.1",
+    "file-loader": "~0.8.5",
     "gulp": "~3.9.0",
-    "gulp-tslint": "~3.6.0",
+    "gulp-tslint": "~4.3.1",
     "gulp-watch": "~4.3.5",
-    "jasmine-core": "~2.3.4",
-    "karma": "~0.13.10",
-    "karma-chrome-launcher": "~0.2.0",
-    "karma-cli": "~0.1.1",
-    "karma-jasmine": "~0.3.6",
-    "karma-phantomjs-launcher": "~0.2.1",
-    "karma-sourcemap-loader": "~0.3.6",
+    "jasmine-core": "~2.4.1",
+    "karma": "~0.13.19",
+    "karma-chrome-launcher": "~0.2.2",
+    "karma-cli": "~0.1.2",
+    "karma-jasmine": "~0.3.7",
+    "karma-phantomjs-launcher": "~1.0.0",
+    "karma-sourcemap-loader": "~0.3.7",
     "karma-webpack": "~1.7.0",
-    "less": "~2.5.3",
-    "less-loader": "~2.2.1",
-    "node-libs-browser": "~0.5.3",
+    "less": "~2.6.0",
+    "less-loader": "~2.2.2",
+    "node-libs-browser": "~1.0.0",
     "null-loader": "~0.1.1",
-    "phantomjs": "~1.9.18",
+    "phantomjs-prebuilt": "~2.1.3",
     "phantomjs-polyfill": "~0.0.1",
     "react-hot-loader": "~1.3.0",
-    "react-addons-test-utils": "~0.14.3",
+    "react-addons-test-utils": "~0.14.7",
     "style-loader": "~0.13.0",
-    "ts-loader": "~0.7.1",
-    "tslint-loader": "~1.0.2",
-    "typescript": "~1.6.2",
-    "webpack": "~1.12.8",
-    "webpack-config": "~2.3.0",
-    "webpack-dev-server": "~1.12.1",
-    "webpack-stream": "~2.1.1"
+    "ts-loader": "~0.8.0",
+    "tslint": "~3.3.0",
+    "tslint-loader": "~2.1.0",
+    "typescript": "~1.7.5",
+    "webpack": "~1.12.12",
+    "webpack-config": "~3.1.0",
+    "webpack-dev-server": "~1.14.1",
+    "webpack-stream": "~3.1.0"
   }
 }
