--- a/package.json
+++ b/package.json
@@ -11,47 +11,53 @@
     "build": "webpack",
     "watch": "webpack -w",
     "test": "karma start karma.conf.js",
-	"test-debug": "karma start karma.conf.js --single-run=false --debug --auto-watch",
+    "test-debug": "karma start karma.conf.js --single-run=false --debug --auto-watch",
     "test-browser": "karma start karma.conf.js --browsers=Chrome",
     "test-browser-debug": "karma start karma.conf.js --browsers=Chrome --single-run=false --debug --auto-watch"
   },
   "dependencies": {
+    "@types/flux": "0.0.27",
+    "@types/jasmine": "^2.2.30",
+    "@types/node": "^4.0.30",
+    "@types/react": "^0.14.27",
+    "@types/react-addons-test-utils": "^0.14.14",
+    "@types/react-dom": "^0.14.13",
     "flux": "~2.1.1",
-    "react": "~0.14.7",
-    "react-dom": "~0.14.7"
+    "react": "~15.2.1",
+    "react-dom": "~15.2.1"
   },
   "devDependencies": {
     "babel": "~6.5.2",
-    "babel-core": "~6.7.4",
+    "babel-core": "~6.11.4",
     "babel-loader": "~6.2.4",
     "babel-plugin-external-helpers-2": "~6.3.13",
-    "babel-polyfill": "~6.7.4",
-    "babel-preset-es2015": "~6.6.0",
+    "babel-polyfill": "~6.9.1",
+    "babel-preset-es2015": "~6.9.0",
     "babel-preset-es2015-loose": "~7.0.0",
     "css-loader": "~0.23.1",
-    "file-loader": "~0.8.5",
+    "file-loader": "~0.9.0",
     "jasmine-core": "~2.4.1",
-    "karma": "~0.13.22",
-    "karma-chrome-launcher": "~0.2.3",
-    "karma-cli": "~0.1.2",
-    "karma-jasmine": "~0.3.8",
-    "karma-phantomjs-launcher": "~1.0.0",
+    "karma": "~1.1.1",
+    "karma-chrome-launcher": "~1.0.1",
+    "karma-cli": "~1.0.1",
+    "karma-jasmine": "~1.0.2",
+    "karma-phantomjs-launcher": "~1.0.1",
     "karma-sourcemap-loader": "~0.3.7",
     "karma-webpack": "~1.7.0",
-    "less": "~2.6.1",
+    "less": "~2.7.1",
     "less-loader": "~2.2.3",
     "node-libs-browser": "~1.0.0",
     "null-loader": "~0.1.1",
     "phantomjs-prebuilt": "~2.1.7",
     "react-hot-loader": "~1.3.0",
-    "react-addons-test-utils": "~0.14.8",
+    "react-addons-test-utils": "~15.2.1",
     "style-loader": "~0.13.1",
-    "ts-loader": "~0.8.1",
-    "tslint": "~3.6.0",
-    "tslint-loader": "~2.1.3",
-    "typescript": "~1.8.9",
-    "webpack": "~1.12.14",
-    "webpack-config": "~3.1.0",
+    "ts-loader": "~0.8.2",
+    "tslint": "~3.13.0",
+    "tslint-loader": "~2.1.5",
+    "typescript": "~2.0.0",
+    "webpack": "~1.13.1",
+    "webpack-config": "~5.2.1",
     "webpack-dev-server": "~1.14.1"
   }
 }
