Simplify and remove tests

--- a/package.json
+++ b/package.json
@@ -8,19 +8,12 @@
   },
   "scripts": {
     "start": "node server.js",
-    "build": "webpack",
-    "watch": "webpack -w",
-    "test": "karma start karma.conf.js",
-    "test-debug": "karma start karma.conf.js --single-run=false --debug --auto-watch",
-    "test-browser": "karma start karma.conf.js --browsers=Chrome",
-    "test-browser-debug": "karma start karma.conf.js --browsers=Chrome --single-run=false --debug --auto-watch"
+    "build": "webpack"
   },
   "dependencies": {
     "@types/flux": "0.0.27",
-    "@types/jasmine": "^2.2.30",
     "@types/node": "^4.0.30",
     "@types/react": "^0.14.27",
-    "@types/react-addons-test-utils": "^0.14.14",
     "@types/react-dom": "^0.14.13",
     "flux": "~2.1.1",
     "react": "~15.2.1",
@@ -36,21 +29,10 @@
     "babel-preset-es2015-loose": "~7.0.0",
     "css-loader": "~0.23.1",
     "file-loader": "~0.9.0",
-    "jasmine-core": "~2.4.1",
-    "karma": "~1.1.1",
-    "karma-chrome-launcher": "~1.0.1",
-    "karma-cli": "~1.0.1",
-    "karma-jasmine": "~1.0.2",
-    "karma-phantomjs-launcher": "~1.0.1",
-    "karma-sourcemap-loader": "~0.3.7",
-    "karma-webpack": "~1.7.0",
     "less": "~2.7.1",
     "less-loader": "~2.2.3",
     "node-libs-browser": "~1.0.0",
-    "null-loader": "~0.1.1",
-    "phantomjs-prebuilt": "~2.1.7",
     "react-hot-loader": "~1.3.0",
-    "react-addons-test-utils": "~15.2.1",
     "style-loader": "~0.13.1",
     "ts-loader": "~0.8.2",
     "tslint": "~3.13.0",
