--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
     "compilerOptions": {
         "target": "es6",
         "sourceMap": true,
-        "jsx": "react"
+        "jsx": "react",
+        "moduleResolution": "node",
+        "experimentalDecorators": true
     }
 }
