--- a/tsconfig.webpack.json
+++ b/tsconfig.webpack.json
@@ -2,7 +2,9 @@
     "compilerOptions": {
         "target": "es6",
         "sourceMap": true,
-        "jsx": "react"
+        "jsx": "react",
+        "moduleResolution": "node",
+        "experimentalDecorators": true
     },
     "files": [
     ]
