Add subreddits, data fetching, async actions example

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,10 @@
         "sourceMap": true,
         "jsx": "react",
         "moduleResolution": "node",
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+
+        "typeRoots": [
+            "Models"
+        ]
     }
 }
