--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "@types/react-dom": "~0.14.23",
     "@types/react-redux": "~4.4.38",
     "@types/redux-logger": "~3.0.0",
-    "@types/redux-thunk": "^2.1.0",
+    "@types/redux-thunk": "~2.1.0",
     "flux": "~3.1.2",
     "react": "~15.4.2",
     "react-dom": "~15.4.2",
     "react-redux": "~5.0.4",
     "redux": "~3.6.0",
     "redux-logger": "~3.0.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "~2.2.0"
   },
   "devDependencies": {
     "awesome-typescript-loader": "~3.1.2",
