--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "~0.14.23",
     "@types/react-redux": "~4.4.38",
     "@types/redux-logger": "~3.0.0",
+    "@types/webpack-env": "^1.13.0",
     "react": "~15.4.2",
     "react-dom": "~15.4.2",
     "react-redux": "~5.0.4",
