--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         "experimentalDecorators": true,
 
         "typeRoots": [
-            "Models"
+            "Models", "typings", "node_modules/@types"
         ]
     }
 }
