--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@types/react": "~15.0.21",
     "@types/react-dom": "~0.14.23",
     "@types/react-redux": "~4.4.38",
+    "@types/redux-actions": "~1.2.3",
     "@types/redux-logger": "~3.0.0",
     "@types/webpack-env": "^1.13.0",
     "react": "~15.4.2",
     "react-dom": "~15.4.2",
     "react-redux": "~5.0.4",
     "redux": "~3.6.0",
+    "redux-actions": "~2.0.1",
     "redux-logger": "~3.0.1",
     "redux-thunk": "~2.2.0"
   },
