--- a/package.json
+++ b/package.json
@@ -11,42 +11,42 @@
     "build": "webpack"
   },
   "dependencies": {
-    "@types/react": "~15.0.21",
-    "@types/react-dom": "~0.14.23",
-    "@types/react-redux": "~4.4.38",
-    "@types/redux-actions": "~1.2.3",
-    "@types/redux-logger": "~3.0.0",
-    "@types/webpack-env": "^1.13.0",
-    "react": "~15.4.2",
-    "react-dom": "~15.4.2",
-    "react-redux": "~5.0.4",
-    "redux": "~3.6.0",
-    "redux-actions": "~2.0.1",
-    "redux-logger": "~3.0.1",
-    "redux-thunk": "~2.2.0"
+    "@types/react": "15.0.28",
+    "@types/react-dom": "15.5.0",
+    "@types/react-redux": "4.4.38",
+    "@types/redux-actions": "1.2.6",
+    "@types/redux-logger": "3.0.0",
+    "@types/webpack-env": "1.13.0",
+    "react": "15.6.0",
+    "react-dom": "15.6.0",
+    "react-redux": "5.0.5",
+    "redux": "3.6.0",
+    "redux-actions": "2.0.3",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.2.0"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "~3.1.2",
-    "babel-cli": "^6.24.0",
-    "babel-core": "~6.24.0",
-    "babel-loader": "~6.4.1",
-    "babel-plugin-external-helpers": "~6.22.0",
-    "babel-polyfill": "~6.23.0",
-    "babel-preset-es2015": "~6.24.0",
-    "babel-preset-es2015-loose": "~8.0.0",
-    "css-loader": "~0.28.0",
-    "file-loader": "~0.11.1",
-    "html-webpack-plugin": "~2.28.0",
-    "less": "~2.7.2",
-    "less-loader": "~4.0.3",
-    "node-libs-browser": "~2.0.0",
-    "react-hot-loader": "~1.3.1",
-    "style-loader": "~0.16.1",
-    "tslint": "~4.5.1",
-    "tslint-loader": "~3.4.3",
-    "typescript": "~2.2.2",
-    "webpack": "~2.3.3",
-    "webpack-config": "~7.0.0",
-    "webpack-dev-server": "~2.4.2"
+    "awesome-typescript-loader": "3.1.3",
+    "babel-cli": "6.24.1",
+    "babel-core": "6.25.0",
+    "babel-loader": "7.0.0",
+    "babel-plugin-external-helpers": "6.22.0",
+    "babel-polyfill": "6.23.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-es2015-loose": "8.0.0",
+    "css-loader": "0.28.4",
+    "file-loader": "0.11.2",
+    "html-webpack-plugin": "2.28.0",
+    "less": "2.7.2",
+    "less-loader": "4.0.4",
+    "node-libs-browser": "2.0.0",
+    "react-hot-loader": "1.3.1",
+    "style-loader": "0.18.2",
+    "tslint": "4.5.1",
+    "tslint-loader": "3.5.3",
+    "typescript": "2.3.4",
+    "webpack": "2.6.1",
+    "webpack-config": "7.0.0",
+    "webpack-dev-server": "2.4.5"
   }
 }
